# PlantTrace

./: .gitignore  AGENTS.md  README.md  TUTORIEL.md  pyproject.toml  run_gui.ps1
.github/workflows/: release.yml
docs/: guide.html  guidev2.html
packaging/: PlantTrace.spec  README.md  planttrace_gui.py
src/planttrace/: app.py  batch.py  bug_report.py  changelog.py  cli.py  conflicts.py  coverage.py  deliverable.py  doc_families.py  export.py  extractor.py  indexer.py  master_register.py  matrix_exports.py  models.py  normalization.py  pdf_engine.py  project_matrix.py  reference_exports.py  reference_profile.py  revisions.py  rule_builder.py  rule_packs.py  rules.py  search.py  self_update.py  semantic.py  store.py  template_exports.py  templates.py  updates.py
src/planttrace/ui/: __init__.py  about_dialog.py  batch_panel.py  changelog_dialog.py  command_palette.py  conflicts_panel.py  coverage_panel.py  export_actions.py  exports_panel.py  families_panel.py  icons.py  master_register_panel.py  matrix_panel.py  menu.py  presenters.py  preview_pane.py  reference_panel.py  revisions_panel.py  rule_builder_panel.py  rules_panel.py  templates_panel.py  theme.py  views.py  window_actions.py  workers.py
tests/: support.py  test_engine.py  test_gui_e2e.py  test_regression.py  test_rule_builder.py  test_ui_contract.py
tools/: build_windows.ps1  check_environment.py
