[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "planttrace"
version = "0.3.0"
description = "Local desktop cross-reference search for massive industrial PDF sets."
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24",
    "PySide6>=6.7",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "pillow>=10.0",
    "pytesseract>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
package = ["pyinstaller>=6.0"]
semantic = ["sentence-transformers>=3.0"]

[project.scripts]
planttrace = "planttrace.cli:main"
planttrace-gui = "planttrace.app:main"

[tool.setuptools.packages.find]
where = ["src"]
